--- a/app.json
+++ b/app.json
@@ -7,18 +7,16 @@
     "plugin",
     "telegram-HunterAlpha",
     "fuck-TG"
-  ),
+  ],
   "repository": "https://github.com/AlphaEliasPY/AlphaHunter"
   "logo": "https://i.imgur.com/N2Ru7ib.jpg",
   "success_url": "t.me/AndroidCave",
-  "buildpacks": [
-   {
+  "buildpacks": {
      "url": "https://github.com/AlphaEliasPY/AlphaHunter"
    },
    {
      "url": "heroku/python"
-   }     
-  ],    
+   }        
   "env": {
     "APP_ID": {
       "description": "Get this value from my.telegram.org! Please do not steal",
