--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: DaisyX/localization/en.yaml
-    translation: /**/DaisyX/localization/%locale_with_underscore%.yaml
+  - source: AlphaHunter/localization/en.yaml
+    translation: /**/AlphaHunter/localization/%locale_with_underscore%.yaml
